[package]
name = "borrow_as"
description = "Partial struct borrowing made easy, including splitting borrows."
version = "0.1.0"
authors = ["Kolsky <kolskytr@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kolsky/borrow_as"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuple_utils = "*"